fix plot button visibility

--- a/public/css/style.styl
+++ b/public/css/style.styl
@@ -2183,6 +2183,7 @@ button.activity-button i
   border-radius 0 0 2px 0
 
 a.button.plot-button
+  display none
   visibility hidden
   position absolute
   z-index 1
